--- a/shop/templates/shop/manage.html
+++ b/shop/templates/shop/manage.html
@@ -11,7 +11,7 @@
 
       <h4 class="mt-4">Bestehende Benutzer</h4>
       <table class="table">
-        <thead><tr><th>username</th><th>display</th><th>id12</th><th>balance</th></tr></thead>
+        <thead><tr><th>Username</th><th>Anzeigename</th><th>ID</th><th>Guthaben</th></tr></thead>
         <tbody>
           {% for u in users %}
             <tr>
@@ -35,7 +35,7 @@
 
       <h4 class="mt-4">Bestehende Produkte</h4>
       <table class="table">
-        <thead><tr><th>Name</th><th>ID</th><th>Preis</th><th>Aktion</th></tr></thead>
+        <thead><tr><th>Name</th><th>ID</th><th>Preis</th><th>Neuer Preis</th></tr></thead>
         <tbody>
           {% for p in products %}
             <tr>
