--- a/shop/templates/shop/user_detail.html
+++ b/shop/templates/shop/user_detail.html
@@ -1,12 +1,16 @@
 {% extends 'shop/base.html' %}
 {% block content %}
-  <h2>{{ user.display_name }}</h2>
+  <h2>{{ user.display_name }} ({{ user.username }})</h2>
   <p><strong>ID:</strong> {{ user.id12 }}<br><strong>Guthaben:</strong> {{ user.balance }}€</p>
 
   <h4>Letzte 5 Transaktionen</h4>
   <ul class="list-group mb-3">
     {% for t in last_transactions %}
-      <li class="list-group-item">{{ t.timestamp }} - {{ t.get_tx_type_display }} - {{ t.amount }}€ {% if t.product %}- {{ t.product.name }}{% endif %} {% if t.to_user %}- an {{ t.to_user.display_name }}{% endif %}</li>
+      <li class="list-group-item">
+        {{ t.timestamp }} - {{ t.get_tx_type_display }} - {{ t.amount }}€
+        {% if t.product %} - {{ t.product.name }}{% endif %}
+        {% if t.to_user %} - an {{ t.to_user.display_name }}{% endif %}
+      </li>
     {% empty %}
       <li class="list-group-item">Keine Transaktionen.</li>
     {% endfor %}
@@ -20,6 +24,7 @@
         <input type="hidden" name="action" value="topup">
         <div class="mb-2"><button class="btn btn-primary">Aufladen</button></div>
       </form>
+
       <div class="btn-group" role="group">
         <form method="post" style="display:inline;">{% csrf_token %}
           <input type="hidden" name="action" value="topup_quick">
@@ -42,6 +47,12 @@
           <button class="btn btn-outline-secondary">50€</button>
         </form>
       </div>
+
+      <hr>
+      <form method="post">{% csrf_token %}
+        <input type="hidden" name="action" value="undo_last">
+        <button class="btn btn-danger">Letzte Transaktion rückgängig machen</button>
+      </form>
     </div>
 
     <div class="col-md-4">
@@ -50,7 +61,7 @@
         {% for p in products %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <div>
-            <strong>{{ p.name }}</strong><br>{{ p.price }}€<br>ID: {{ p.id12 }}
+            <strong>{{ p.name }}</strong><br>{{ p.price }}€<br>
           </div>
           <form method="post" style="margin-left:10px;">{% csrf_token %}
             <input type="hidden" name="action" value="buy">
@@ -60,11 +71,12 @@
         </li>
         {% endfor %}
       </ul>
+
       <hr>
       <h6>Produkt per ID kaufen</h6>
       <form method="post">{% csrf_token %}
+        <input id="product_id_input" name="product_id" class="form-control" placeholder="12-stellige Produkt ID">
         <input type="hidden" name="action" value="buy_by_id">
-        {{ buyid_form.product_id }}
         <button class="btn btn-primary mt-2">Kaufen</button>
       </form>
     </div>
@@ -73,10 +85,8 @@
       <h5>Geld schicken</h5>
       <form method="post">{% csrf_token %}
         <input type="hidden" name="action" value="send">
-        {{ send_form.to_user_id.label_tag }}
-        {{ send_form.to_user_id }}
-        {{ send_form.amount.label_tag }}
-        {{ send_form.amount }}
+        {{ send_form.to_user_id.label_tag }} {{ send_form.to_user_id }}
+        {{ send_form.amount.label_tag }} {{ send_form.amount }}
         <div class="mt-2"><button class="btn btn-primary">Senden</button></div>
       </form>
 
@@ -89,4 +99,11 @@
       </form>
     </div>
   </div>
+
+<script>
+  const prodInput = document.getElementById('product_id_input');
+  if (prodInput) prodInput.focus();
+
+  setTimeout(() => { window.location.href = "{% url 'index' %}"; }, 30000);
+</script>
 {% endblock %}
