--- a/shop/templates/shop/user_detail.html
+++ b/shop/templates/shop/user_detail.html
@@ -88,7 +88,7 @@
       <hr>
       <h6>Produkt per ID kaufen</h6>
       <form method="post">{% csrf_token %}
-        <input id="product_id_input" name="product_id" class="form-control" placeholder="12-stellige Produkt ID">
+        <input id="product_id_input" name="product_id" class="form-control" placeholder="EAN">
         <input type="hidden" name="action" value="buy_by_id">
         <button class="btn btn-primary mt-2">Kaufen</button>
       </form>
