--- a/shop/templates/shop/user_detail.html
+++ b/shop/templates/shop/user_detail.html
@@ -55,8 +55,8 @@
           <form method="post">{% csrf_token %}
 
             <div class="input-group">
-              <input name="to_user_username" class="form-control" placeholder="Username">
-              <input name="amount" type="number" step="0.01" min="0.01" class="form-control" placeholder="Betrag">
+              {{ send_form.to_user }}
+              {{ send_form.amount }}
               <input type="hidden" name="action" value="send">
               <button class="btn btn-primary">Senden</button>
             </div>
