--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -26,9 +26,11 @@
         <h3 class="fw-bold">{{ u.display_name }}</h3>
         <div class="text-muted">ID: {{ u.id12 }}</div>
 
+{% if app_settings.show_balance_in_user_list %}
         <div class="mt-3 fs-4 fw-bold {% if u.balance < 0 %}text-danger{% else %}text-success{% endif %}">
           {{ u.balance }}€
         </div>
+{% endif %}
 
         {% if u.last_tx %}
         <div class="mt-2 text-muted small">
