--- a/shop/templates/shop/manage.html
+++ b/shop/templates/shop/manage.html
@@ -2,6 +2,24 @@
 {% block content %}
   <div class="row">
     <div class="col-md-4">
+      <h3>App Settings</h3>
+      <form method="post">{% csrf_token %}
+        <input type="hidden" name="update_app_settings" value="1">
+        <div class="form-check form-switch mb-3">
+          <label class="form-check-label" for="show_manage_menu">Management Menü anzeigen</label>
+          <input class="form-check-input" type="checkbox" id="show_manage_menu" name="show_manage_menu"
+                 {% if app_settings.show_manage_menu %}checked{% endif %}>
+        </div>
+        <div class="form-check form-switch mb-3">
+          <label class="form-check-label" for="show_balance_in_user_list">Guthaben in Benutzerliste anzeigen</label>
+          <input class="form-check-input" type="checkbox" id="show_balance_in_user_list" name="show_balance_in_user_list"
+                 {% if app_settings.show_balance_in_user_list %}checked{% endif %}>
+        </div>
+        <button class="btn btn-primary">Speichern</button>
+      </form>
+
+      <hr>
+
       <h3>Magic IDs</h3>
       <form method="post" enctype="multipart/form-data">{% csrf_token %}
         <input type="hidden" name="create_magic_id" value="1">
